<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical" >

        <com.xlj.erp.movefield.view.BannerView
            android:id="@+id/binnerview"
            android:layout_width="match_parent"
            android:layout_height="200dp" >
        </com.xlj.erp.movefield.view.BannerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="18dp" >

            <LinearLayout
                android:id="@+id/module_building_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_building_info" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="center_horizontal"
                    android:text="@string/house_project_building_info"
                    android:textColor="@color/house_project_module_text_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/module_promote_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_promote_room" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="center_horizontal"
                    android:text="@string/house_project_promote_room"
                    android:textColor="@color/house_project_module_text_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/module_design_sketch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_design_sketch" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="center_horizontal"
                    android:text="@string/house_project_design_sketch"
                    android:textColor="@color/house_project_module_text_color"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="18dp" >

            <LinearLayout
                android:id="@+id/module_register_customer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_register_customer" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="center_horizontal"
                    android:text="@string/house_project_register_customer"
                    android:textColor="@color/house_project_module_text_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/module_mortgage_calc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_mortgage_calc" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="center_horizontal"
                    android:text="@string/house_project_mortgage_calc"
                    android:textColor="@color/house_project_module_text_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/module_saleskits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_saleskits" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="center_horizontal"
                    android:text="@string/house_project_saleskits"
                    android:textColor="@color/house_project_module_text_color"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/module_house_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_btn"
            android:text="@string/house_project_house_search"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>