<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/md_color_primary"
        android:padding="12dp" >

        <TextView
            android:id="@+id/menu_authority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:singleLine="true"
            android:text="置业经理"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/menu_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/menu_authority"
            android:layout_marginBottom="6dp"
            android:singleLine="true"
            android:text="李明"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/menu_switch_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_layout"
        android:padding="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/menu_switch_project"
            android:textColor="@color/menu_text"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_right" />
    </RelativeLayout>

    <include layout="@layout/devider_menu" />

    <RelativeLayout
        android:id="@+id/menu_my_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_layout"
        android:padding="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/menu_my_message"
            android:textColor="@color/menu_text"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_right" />
    </RelativeLayout>

    <include layout="@layout/devider_menu" />

    <RelativeLayout
        android:id="@+id/menu_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_layout"
        android:padding="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/menu_logout"
            android:textColor="@color/menu_text"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_right" />
    </RelativeLayout>

    <include layout="@layout/devider_menu" />

</LinearLayout>