<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <include layout="@layout/toolbar" />

    <include
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="12dp"
        layout="@layout/devider_settings" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:text="@string/settings_server"
            android:textColor="@color/light_black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/settings_server_host"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="50dp"
            android:background="@null"
            android:singleLine="true"
            android:src="@drawable/ic_setting"
            android:textColor="@color/settings_edit"
            android:textSize="16sp" />
    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="1px"
        layout="@layout/devider_settings" />

    <include
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="12dp"
        layout="@layout/devider_settings" />

    <RelativeLayout
        android:id="@+id/settings_clean_cache"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_item_layout"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:text="@string/settings_clean_cache"
            android:textColor="@color/light_black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_right" />
    </RelativeLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="12dp"
        layout="@layout/devider_settings"
        android:background="@color/white" />

    <RelativeLayout
        android:id="@+id/settings_about"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_item_layout"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:text="@string/settings_about"
            android:textColor="@color/light_black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_right" />
    </RelativeLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="1px"
        layout="@layout/devider_settings" />

</LinearLayout>